# QT5_AND_PYQT5

./: README.md
basic_demos/qmake_test/: make.sh  qmake_test.pro
basic_demos/qml_test/: main.qml  view.qml
basic_demos/qt_test/: Makefile  moc_widget.cpp  qt_test  qt_test.pro  qt_test.pro.user.21  qt_test.pro.user.4.8-pre1  ui_form.h  ui_widget.h
basic_demos/signal_test/: signal_test.cpp  signal_test.h  signal_test.pro  signal_test.ui
basic_demos/widgetRect_test/: main.cpp  widgetRect_test.cpp  widgetRect_test.pro  xthread.cpp
basic_demos/widget_test/: widget_test.pro  xwidget.h
basic_opencv/: CMakeLists.txt  README.md  matrix_operation.cpp  read_image.cpp  read_save_params.cpp  read_video.cpp
qt5/basic_demos/qmake_test/: README.md  main.cpp  qmake_test.pro
qt5/basic_demos/qt_test/: Makefile  form.ui  main.cpp  widget.ui
qt5/basic_demos/signal_test/: main.cpp  signal_test.cpp  signal_test.h
qt5/basic_demos/widgetRect_test/: widgetRect_test.h  xthread.h
qt5/basic_demos/widget_test/: main.cpp  widget_test.cpp  widget_test.h  xwidget.cpp
qt5/basic_demos/winstat_test/: main.cpp  widget.cpp  widget.ui  winstat_test.pro
